--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "testwebdriver",
   "type": "module",
   "devDependencies": {
+    "@eslint/js": "^9.32.0",
     "@wdio/cli": "^9.18.4",
     "@wdio/local-runner": "^9.18.4",
     "@wdio/mocha-framework": "^9.18.0",
-    "@wdio/spec-reporter": "^9.18.0"
+    "@wdio/spec-reporter": "^9.18.0",
+    "eslint": "^9.32.0",
+    "globals": "^16.3.0"
   },
   "scripts": {
-    "wdio": "wdio run ./wdio.conf.js"
+    "wdio": "wdio run ./wdio.conf.js",
+    "lint": "eslint ./test"
   },
   "dependencies": {
     "chai": "^5.2.1"
